--- a/CourseWorkCsharp2/ShareNote.csproj
+++ b/CourseWorkCsharp2/ShareNote.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="SQLconnect.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="WriteNote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WriteNote.Designer.cs">
+      <DependentUpon>WriteNote.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LoginWindow.resx">
@@ -70,6 +76,9 @@
     <EmbeddedResource Include="Properties\Resources.resx" />
     <EmbeddedResource Include="RegisterWindow.resx">
       <DependentUpon>RegisterWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WriteNote.resx">
+      <DependentUpon>WriteNote.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
