--- a/CourseWorkCsharp2/ShareNote.csproj
+++ b/CourseWorkCsharp2/ShareNote.csproj
@@ -31,7 +31,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup>
-    <RootNamespace>ShareNote</RootNamespace>
+    <RootNamespace>CourseWorkCsharp2</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -50,10 +50,32 @@
     <Compile Include="LoginWindow.Designer.cs">
       <DependentUpon>LoginWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Note.cs" />
+    <Compile Include="Notebook.cs" />
+    <Compile Include="NotebookWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NotebookWindow.Designer.cs">
+      <DependentUpon>NotebookWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs" />
-    <Compile Include="Properties\Settings.Designer.cs" />
+    <Compile Include="Properties\Resources1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Settings1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="RegisterWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,7 +83,14 @@
       <DependentUpon>RegisterWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="SQLconnect.cs" />
+    <Compile Include="University.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserWindowedit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserWindowedit.Designer.cs">
+      <DependentUpon>UserWindowedit.cs</DependentUpon>
+    </Compile>
     <Compile Include="WriteNote.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,16 +102,32 @@
     <EmbeddedResource Include="LoginWindow.resx">
       <DependentUpon>LoginWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx" />
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NotebookWindow.resx">
+      <DependentUpon>NotebookWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegisterWindow.resx">
       <DependentUpon>RegisterWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserWindowedit.resx">
+      <DependentUpon>UserWindowedit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WriteNote.resx">
       <DependentUpon>WriteNote.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\Settings.settings" />
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
